[gd_scene load_steps=16 format=3 uid="uid://6ci61elv1k5l"]

[ext_resource type="Script" path="res://scripts/templates/characters/player/main.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://c6xwwar3760le" path="res://sprites/characters/alex/alex.png" id="2"]
[ext_resource type="AudioStream" uid="uid://pt4lnsnrgv20" path="res://audio/fx/steps/step_10.wav" id="3"]
[ext_resource type="AudioStream" uid="uid://jpo4gt50ep33" path="res://audio/fx/steps/step_12.wav" id="4"]
[ext_resource type="SpriteFrames" path="res://sprites/water/player_in_water.tres" id="5"]
[ext_resource type="Script" path="res://scripts/templates/characters/player/splashes.gd" id="6"]
[ext_resource type="Script" path="res://scripts/templates/characters/player/joystick.gd" id="7"]
[ext_resource type="Script" path="res://scripts/templates/characters/player/keyboard.gd" id="8"]
[ext_resource type="Script" path="res://scripts/templates/characters/player/sprite.gd" id="9"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(37.933, 10.8797)

[sub_resource type="OccluderPolygon2D" id="2"]
polygon = PackedVector2Array(-6.76242, 14.5207, -6.12232, 14.1234, 2.72861, 14.1454, 3.45699, 14.6752, 2.75068, 15.1608, -6.23268, 15.1387)

[sub_resource type="Animation" id="3"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Footstep_1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Footstep_2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="4"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Footstep_1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Footstep_2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="5"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 1]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Footstep_1")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Footstep_2")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d3tno"]
_data = {
"down": SubResource("3"),
"right": SubResource("4"),
"up": SubResource("5")
}

[node name="Player" type="CharacterBody2D"]
process_priority = -1
z_index = 4
z_as_relative = false
position = Vector2(68.7217, 228.33)
collision_layer = 2
script = ExtResource("1")

[node name="KeyboardHandler" type="Node" parent="."]
script = ExtResource("8")

[node name="JoystickHandler" type="Node" parent="."]
script = ExtResource("7")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(-0.554323, -6.13217)
shape = SubResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
light_mask = 2
position = Vector2(0, -48)
scale = Vector2(3, 3)
texture = ExtResource("2")
hframes = 3
vframes = 3
frame = 7
region_enabled = true
region_rect = Rect2(0, 0, 57, 108)
script = ExtResource("9")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(33.3505, 5.4938)
scale = Vector2(1.005, 1.005)
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true
position_smoothing_speed = 7.0
editor_draw_limits = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
show_behind_parent = true
position = Vector2(4.5, -45.5173)
scale = Vector2(3, 3)
occluder = SubResource("2")

[node name="Water" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(0.901961, 0.901961, 0.901961, 1)
show_behind_parent = true
z_index = 1
position = Vector2(-0.17448, -1.8925)
scale = Vector2(5.1, 5.1)
sprite_frames = ExtResource("5")
frame = 2
script = ExtResource("6")

[node name="Footstep_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3")
volume_db = -15.0
bus = &"FX"

[node name="Footstep_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4")
volume_db = -15.0
bus = &"FX"

[node name="WalkCycle" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d3tno")
}
